🎨 Major Design Overhaul - Modern Clean Layout
Complete redesign based on competitor analysis for better visual appeal:

🌑 Background System
- Replaced animated background with clean dark gradient
- Fixed gradient background for better performance
- Professional dark theme matching gaming aesthetics

📱 Header Redesign
- Horizontal layout with logo and nav in same row
- Compact design (reduced padding by 50%)
- Semi-transparent background with blur effect
- Refined borders and shadows
- Better mobile responsiveness

🧭 Navigation Modernization
- Simplified button style with subtle orange theme
- Cleaner hover effects (no complex animations)
- Better spacing and alignment
- Horizontal layout for better UX

🎯 Hero Section Simplification
- Removed excessive decorative elements
- Clean gradient background
- Removed emojis for professional look
- Better text hierarchy
- Simplified animations

🎴 Card System Redesign
- Semi-transparent dark backgrounds
- Backdrop blur effects for depth
- Refined borders (1px instead of 2-3px)
- Subtle hover effects
- Consistent spacing throughout

📦 Content Areas Optimization
- Unified card styling across all sections
- Better spacing and padding
- Removed excessive decorations
- Clearer information hierarchy
- Professional gaming aesthetic

🎨 Overall Style Improvements
- Dark theme with orange accents
- Clean and modern design language
- Professional gaming feel
- Better visual hierarchy
- Improved readability

📊 Layout Improvements
- Increased max-width to 1400px
- Better container system
- Consistent padding (2rem)
- Improved responsive design
- Cleaner section spacing

✨ Visual Polish
- Removed complex animations for cleaner look
- Simplified color usage
- Better contrast ratios
- Professional typography
- Consistent design system

🎯 Competitor-Inspired Features
- theforgecalculator.org style dark theme
- theforgecalculator.net clean layout
- Modern card-based design
- Professional gaming aesthetics
- Better information architecture

This

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
     <header>
         <div class="container">
             <h1>⚒️ Forge Calculator</h1>
-                        <nav>
+            <nav>
                 <a href="/recipes">Recipes</a>
                 <a href="/codes">Codes</a>
                 <a href="/">Calculator</a>
@@ -525,10 +525,10 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero page-enter">
+    <section class="hero">
         <div class="container">
-            <h2>🔥 The Forge Calculator 🔥</h2>
-            <p>Master your weapon and armor crafting with The Forge Calculator - the ultimate tool for optimizing ore combinations and trait setups in The Forge Roblox game. Whether you're forging your first weapon or perfecting legendary builds, our calculator provides real-time calculations and expert guidance for all your crafting needs.</p>
+            <h2>The Forge Calculator</h2>
+            <p>Master your weapon and armor crafting with The Forge Calculator - the ultimate tool for optimizing ore combinations and trait setups in The Forge Roblox game. Calculate forging probabilities, optimize ore combinations, and predict weapon and armor stats across World 1, 2, and 3 (The Peak).</p>
         </div>
     </section>
 
@@ -607,38 +607,38 @@
     <!-- Features Section -->
     <section id="features" class="features">
         <div class="container">
-            <h2>⚡ Powerful Features ⚡</h2>
+            <h2>Powerful Features</h2>
             <div class="features-grid">
-                <div class="feature-card stagger-1">
+                <div class="feature-card">
                     <h3>⚔️ Weapon & Armor Classes</h3>
-                    <p>The Forge Calculator instantly shows which weapon or armor class you'll craft in Roblox Forge based on your ore combinations, helping you plan your builds effectively and avoid wasted resources.</p>
+                    <p>The Forge Calculator instantly shows which weapon or armor class you'll craft based on your ore combinations, helping you plan your builds effectively.</p>
                 </div>
-                <div class="feature-card stagger-2">
+                <div class="feature-card">
                     <h3>📊 Optimal Ore Amounts</h3>
-                    <p>Our Roblox Forge calculator calculates the optimal number of ores needed to increase chances of crafting specific weapon or armor sets with desired traits and maximum efficiency.</p>
+                    <p>Calculate the optimal number of ores needed to increase chances of crafting specific weapon or armor sets with desired traits.</p>
                 </div>
-                <div class="feature-card stagger-3">
+                <div class="feature-card">
                     <h3>⚡ Real-Time Results</h3>
-                    <p>The Forge Calculator processes your inputs and presents results of potential crafts in real time, eliminating manual calculations and giving you instant feedback as you experiment.</p>
+                    <p>Process your inputs and get results of potential crafts in real time, eliminating manual calculations.</p>
                 </div>
-                <div class="feature-card stagger-1">
+                <div class="feature-card">
                     <h3>🎯 Modifier Multipliers</h3>
-                    <p>See final modifier multipliers and trait strength percentages with our Roblox Forge calculator to optimize your forging strategy and create the most powerful equipment possible.</p>
+                    <p>See final modifier multipliers and trait strength percentages to optimize your forging strategy.</p>
                 </div>
-                <div class="feature-card stagger-2">
+                <div class="feature-card">
                     <h3>✨ Trait Activation</h3>
-                    <p>The Roblox Forge Calculator shows whether ore traits will be active and how strong the applied traits will be for your craft, ensuring you get the bonuses you expect.</p>
+                    <p>Shows whether ore traits will be active and how strong the applied traits will be for your craft.</p>
                 </div>
-                <div class="feature-card stagger-3">
+                <div class="feature-card">
                     <h3>🔧 Complete Coverage</h3>
-                    <p>Our forge calculator supports all ore combinations and trait setups for comprehensive forging assistance in The Forge Roblox game, from basic iron to legendary materials.</p>
+                    <p>Supports all ore combinations and trait setups for comprehensive forging assistance in The Forge.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- What Is Section -->
-    <section id="what-is" class="content-section stagger-1">
+    <section id="what-is" class="content-section">
         <div class="container">
             <h2>What is The Forge Calculator?</h2>
             <p>The Forge Calculator is an all-in-one tool designed specifically for players forging weapons and armor in The Forge on Roblox. Our comprehensive forge calculator helps you determine optimal ore combinations and trait setups without manual calculations. Whether you're a beginner learning the forging system or an experienced player seeking optimal builds, The Forge Calculator takes the guesswork out of crafting.</p>
@@ -648,7 +648,7 @@
     </section>
 
     <!-- How To Section -->
-    <section id="how-to" class="content-section stagger-2">
+    <section id="how-to" class="content-section">
         <div class="container">
             <h2>How to Use The Forge Calculator</h2>
             <p>Using The Forge Calculator is straightforward and designed to save you time when forging weapons and armor in Roblox. Follow these simple steps to optimize your crafting strategy:</p>
@@ -665,7 +665,7 @@
     </section>
 
     <!-- Why Section -->
-    <section id="why" class="content-section stagger-3">
+    <section id="why" class="content-section">
         <div class="container">
             <h2>Why Use The Forge Calculator?</h2>
             <p>The Forge Roblox game has intricate forging mechanics with complex ore combinations and trait systems. The Forge Calculator solves this complexity by providing instant, accurate calculations that help you make informed decisions about your weapon and armor builds without manual calculations.</p>
@@ -675,9 +675,9 @@
     </section>
 
     <!-- FAQ Section -->
-    <section id="faq" class="faq content-section stagger-4">
+    <section id="faq" class="faq">
         <div class="container">
-            <h2>❓ Frequently Asked Questions</h2>
+            <h2>Frequently Asked Questions</h2>
             <div class="faq-item">
                 <h3>Is The Forge Calculator accurate for The Forge on Roblox?</h3>
                 <p>Yes, The Forge Calculator uses the latest game data to provide accurate ore combination calculations, modifier multipliers, and trait percentages for all weapons and armor in The Forge. We regularly update our forge calculator to reflect any game changes.</p>
