--- a/wiki/index.html
+++ b/wiki/index.html
@@ -62,7 +62,6 @@
                 <a href="/weapons">Weapons</a>
                 <a href="/armor">Armor</a>
                 <a href="/pickaxe">Pickaxe</a>
-                <a href="/private-server">Private Servers</a>
                 <a href="/blog">Blog</a>
                 <a href="/feedback">Feedback</a>
             </nav>
@@ -275,6 +274,12 @@
                 <div class="category-card">
                     <div class="category-icon">🎫</div>
                     <h3 class="category-title"><a href="gamepass">Gamepasses & Purchases</a></h3>
+                </div>
+
+                <!-- Private Servers -->
+                <div class="category-card">
+                    <div class="category-icon">🖥️</div>
+                    <h3 class="category-title"><a href="/private-server">Private Servers</a></h3>
                 </div>
             </div>
         </div>
