fix: correct best-recipes link to use absolute path
Changed href from 'best-recipes' to '/recipes/best-recipes' in recipes/index.html to ensure proper navigation without redirects

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
             
-            <a href="best-recipes">
+            <a href="/recipes/best-recipes">
                 🏆 View Best Recipes →
             </a>
         </div>
