fix: correct all relative path links to use absolute paths
Fixed 404 errors caused by relative path links in multiple files:

ore/index.html:
- stone → /ore/stone (3 occurrences)
- mythril → /ore/mythril
- snowite → /ore/snowite

wiki/index.html:
- races → /wiki/races
- enemies → /wiki/enemies
- runes → /wiki/runes
- npcs → /wiki/npcs
- gamepass → /wiki/gamepass

blog/index.html:
- mastering-the-forge → /blog/mastering-the-forge
- introducing-calculator → /blog/introducing-calculator

ru/recipes/index.html:
- best-recipes → /ru/recipes/best-recipes

All links now use absolute paths to prevent 404 errors and ensure proper navigation without redirects.

--- a/ore/index.html
+++ b/ore/index.html
@@ -211,7 +211,7 @@
                     <tbody>
                         <!-- Common Ores -->
                         <tr>
-                            <td class="ore-name"><a href="stone">Stone</a></td>
+                            <td class="ore-name"><a href="/ore/stone">Stone</a></td>
                             <td class="rarity-common">Common</td>
                             <td>1/1</td>
                             <td>0.2x</td>
@@ -559,7 +559,7 @@
                             <td>Dangerous, unstable, and glowing green.</td>
                         </tr>
                         <tr>
-                            <td class="ore-name"><a href="mythril">Mythril</a></td>
+                            <td class="ore-name"><a href="/ore/mythril">Mythril</a></td>
                             <td class="rarity-legendary">Legendary</td>
                             <td>1/813</td>
                             <td>3.5x</td>
@@ -609,7 +609,7 @@
                             <td>So bright it almost floats.</td>
                         </tr>
                         <tr>
-                            <td class="ore-name"><a href="snowite">Snowite</a></td>
+                            <td class="ore-name"><a href="/ore/snowite">Snowite</a></td>
                             <td class="rarity-legendary">Legendary</td>
                             <td>1/4325</td>
                             <td>8x</td>
@@ -755,7 +755,7 @@
 
             <h2>Rock Types & What They Contain:</h2>
             <ul>
-                <li><strong>Pebble:</strong> <a href="stone">Stone</a>, Sand Stone, Copper, Iron, Poopite</li>
+                <li><strong>Pebble:</strong> <a href="/ore/stone">Stone</a>, Sand Stone, Copper, Iron, Poopite</li>
                 <li><strong>Rock:</strong> Sand Stone, Copper, Iron, Tin, Silver, Mushroomite, Bananite, Cardboardite</li>
                 <li><strong>Boulder:</strong> Copper, Iron, Tin, Silver, Gold, Mushroomite, Bananite, Cardboardite, Aite, Poopite</li>
                 <li><strong>Basalt Rock:</strong> Silver, Gold, Platinum</li>
@@ -770,7 +770,7 @@
             <h2 class="text-highlight">Mining Rocks:</h2>
             <p>The primary method to gather ores. Mine different rock types to find various ores:</p>
             <ul>
-                <li><strong>Pebble:</strong> Easiest to mine, contains common ores like <a href="stone">Stone</a>, Copper, and Iron</li>
+                <li><strong>Pebble:</strong> Easiest to mine, contains common ores like <a href="/ore/stone">Stone</a>, Copper, and Iron</li>
                 <li><strong>Rock:</strong> Medium difficulty, good variety including Tin, Silver, and Mushroomite</li>
                 <li><strong>Boulder:</strong> Harder to mine, best chance for rare ores like Gold, Platinum, and Aite</li>
                 <li><strong>Basalt Rock:</strong> Special rock type with Silver, Gold, and Platinum</li>
@@ -792,7 +792,7 @@
             
             <h2>Common Ores - Great for Beginners:</h2>
             <ul>
-                <li><strong><a href="stone">Stone</a>:</strong> The most basic material - it's literally just a rock</li>
+                <li><strong><a href="/ore/stone">Stone</a>:</strong> The most basic material - it's literally just a rock</li>
                 <li><strong>Sand Stone:</strong> Crumbly but buildable, not water-resistant</li>
                 <li><strong>Copper:</strong> Reliable starter material for basic crafting</li>
                 <li><strong>Iron:</strong> The workhorse of the forge - versatile and dependable</li>
