--- a/ru/recipes/index.html
+++ b/ru/recipes/index.html
@@ -132,7 +132,7 @@
                 </div>
             </div>
             
-            <a href="best-recipes">
+            <a href="/ru/recipes/best-recipes">
                 🏆 View Best Recipes →
             </a>
         </div>
