--- a/wiki/index.html
+++ b/wiki/index.html
@@ -249,31 +249,31 @@
                 <!-- Races -->
                 <div class="category-card">
                     <div class="category-icon">👤</div>
-                    <h3 class="category-title"><a href="races">Races & Traits</a></h3>
+                    <h3 class="category-title"><a href="/wiki/races">Races & Traits</a></h3>
                 </div>
 
                 <!-- Enemies -->
                 <div class="category-card">
                     <div class="category-icon">⚔️</div>
-                    <h3 class="category-title"><a href="enemies">Enemies & Combat</a></h3>
+                    <h3 class="category-title"><a href="/wiki/enemies">Enemies & Combat</a></h3>
                 </div>
 
                 <!-- Runes -->
                 <div class="category-card">
                     <div class="category-icon">🔮</div>
-                    <h3 class="category-title"><a href="runes">Runes & Enhancements</a></h3>
+                    <h3 class="category-title"><a href="/wiki/runes">Runes & Enhancements</a></h3>
                 </div>
 
                 <!-- NPCs -->
                 <div class="category-card">
                     <div class="category-icon">🧙</div>
-                    <h3 class="category-title"><a href="npcs">NPCs & Characters</a></h3>
+                    <h3 class="category-title"><a href="/wiki/npcs">NPCs & Characters</a></h3>
                 </div>
 
                 <!-- Gamepasses -->
                 <div class="category-card">
                     <div class="category-icon">🎫</div>
-                    <h3 class="category-title"><a href="gamepass">Gamepasses & Purchases</a></h3>
+                    <h3 class="category-title"><a href="/wiki/gamepass">Gamepasses & Purchases</a></h3>
                 </div>
 
                 <!-- Private Servers -->
