seo: add internal links to orphan pages
Added contextual internal links throughout the site to improve SEO and reduce orphan pages:

index.html:
- Added links to /blog/introducing-calculator and /blog/mastering-the-forge in Why section

recipes/index.html:
- Added links to /ore/mythril, /ore/snowite, /ore/stone, and /ore in Pro Tip section

weapons.html:
- Added link to /wiki/npcs in Enhancer section
- Added link to /wiki/runes in Runemaker section

armor.html:
- Added link to /wiki/enemies in Armor System Overview

pickaxe.html:
- Added links to /wiki/runes and /wiki/races in Rune Slots section

codes/index.html:
- Added link to /wiki/gamepass in expired codes section

These contextual links help search engines discover all pages and improve internal link structure.

--- a/armor.html
+++ b/armor.html
@@ -162,7 +162,7 @@
         <!-- Armor Overview -->
         <div class="content-section">
             <h2>📋 Armor System Overview</h2>
-            <p>Armor is the Forger's most important tool for defending and tanking against enemies in The Forge. You can forge armor by melting ores and choosing the armor option. There are currently <strong>15 armor pieces</strong> split across three categories: <strong>Light Armor</strong>, <strong>Medium Armor</strong>, and <strong>Heavy Armor</strong>.</p>
+            <p>Armor is the Forger's most important tool for defending and tanking against enemies in The Forge. You can forge armor by melting ores and choosing the armor option. There are currently <strong>15 armor pieces</strong> split across three categories: <strong>Light Armor</strong>, <strong>Medium Armor</strong>, and <strong>Heavy Armor</strong>. Learn more about <a href="/wiki/enemies">enemies and combat</a> in our wiki.</p>
             
             <div class="info-box">
                 <h3>🎯 Key Armor Mechanics</h3>
