--- a/codes/index.html
+++ b/codes/index.html
@@ -269,7 +269,7 @@
             </div>
 
             <p>
-                ⚠️ These codes have expired and will no longer work. Check back regularly for new codes!
+                ⚠️ These codes have expired and will no longer work. Check back regularly for new codes! Want more rewards? Check out our <a href="/wiki/gamepass">gamepasses guide</a> for permanent boosts.
             </p>
         </div>
 
