--- a/pickaxe.html
+++ b/pickaxe.html
@@ -258,7 +258,7 @@
                 
                 <div class="stat-card">
                     <h3>💎 Rune Slots</h3>
-                    <p>Rune Slots determine how many Runes can be socketed into a pickaxe. More slots let you stack powerful mining traits and luck modifiers.</p>
+                    <p>Rune Slots determine how many Runes can be socketed into a pickaxe. More slots let you stack powerful mining traits and luck modifiers. Learn more about <a href="/wiki/runes">runes</a> and <a href="/wiki/races">races & traits</a> in our wiki.</p>
                 </div>
             </div>
         </div>
