--- a/recipes/index.html
+++ b/recipes/index.html
@@ -190,7 +190,7 @@
             <div>
                 <div>
                     <h3>💡 Pro Tip</h3>
-                    <p>Use the calculator below to automatically generate these ore combinations. Higher tier weapons require more ores and have lower success rates, but produce significantly more powerful equipment!</p>
+                    <p>Use the calculator below to automatically generate these ore combinations. Higher tier weapons require more ores and have lower success rates, but produce significantly more powerful equipment! Learn more about specific ores like <a href="/ore/mythril">Mythril</a>, <a href="/ore/snowite">Snowite</a>, and <a href="/ore/stone">Stone</a> in our <a href="/ore">complete ore guide</a>.</p>
                 </div>
             </div>
         </div>
