--- a/weapons.html
+++ b/weapons.html
@@ -277,7 +277,7 @@
                 <!-- Enhancer -->
                 <div class="enhancement-card">
                     <h3 class="enhancement-card-header">🔮 ENHANCER</h3>
-                    <p class="enhancement-card-text">By talking to <strong class="text-highlight">NPC Enhancer</strong>, you can spend <strong class="text-highlight">essences</strong> and <strong class="text-highlight">gold</strong> to upgrade your weapon.</p>
+                    <p class="enhancement-card-text">By talking to <strong class="text-highlight">NPC Enhancer</strong>, you can spend <strong class="text-highlight">essences</strong> and <strong class="text-highlight">gold</strong> to upgrade your weapon. Learn more about <a href="/wiki/npcs">NPCs in The Forge</a>.</p>
                     <ul class="enhancement-card-list">
                         <li>Upgrades improve all stats of the weapon.</li>
                         <li>Certain upgrades can increase the number of rune slots.</li>
@@ -288,7 +288,7 @@
                 <!-- Runemaker -->
                 <div class="enhancement-card">
                     <h3 class="enhancement-card-header">✨ RUNEMAKER</h3>
-                    <p class="enhancement-card-text"><strong class="text-highlight">NPC Runemaker</strong> allows you to socket <strong class="text-highlight">runes</strong> into weapons in exchange for <strong class="text-highlight">runes</strong> and <strong class="text-highlight">gold</strong>.</p>
+                    <p class="enhancement-card-text"><strong class="text-highlight">NPC Runemaker</strong> allows you to socket <strong class="text-highlight">runes</strong> into weapons in exchange for <strong class="text-highlight">runes</strong> and <strong class="text-highlight">gold</strong>. Check out our <a href="/wiki/runes">complete runes guide</a> for more details.</p>
                     <ul class="enhancement-card-list">
                         <li>Runes add buffs to help with farming, defending, and fighting.</li>
                         <li>You can only apply runes if your weapon has available rune slots.</li>
