将 recipes 页面的 iframe 改为跳转首页的链接按钮

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -243,19 +243,16 @@
             </div>
         </div>
 
-        <!-- Calculator Embed -->
-        <div>
+        <!-- Calculator Link -->
+        <div class="content-section">
             <h2>
                 🔥 The Forge Calculator
             </h2>
-            <div>
-                <iframe 
-                    src="https://blox-informer-gachas.github.io/blox-informer-gachas/gachas/the-forge-crafting-calculator.html?quickcraft=true" 
-                    class="gacha-simulator-wrapper iframe"
-                    title="The Forge Crafting Calculator"
-                    loading="lazy"
-                    allowfullscreen>
-                </iframe>
+            <p>Use our interactive calculator to test ore combinations and create custom recipes.</p>
+            <div style="text-align: center; margin: 2rem 0;">
+                <a href="/" class="forge-button">
+                    🔥 Go to Calculator
+                </a>
             </div>
         </div>
 
