突出显示 View Best Recipes 按钮，添加橙色渐变背景和更大的按钮样式

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <!-- Best Recipes Entry Point -->
-        <div>
+        <div class="content-section" style="background: linear-gradient(135deg, rgba(245, 158, 11, 0.1) 0%, rgba(245, 158, 11, 0.05) 100%); border: 2px solid rgba(245, 158, 11, 0.3);">
             <h2>
                 🏆 Best Recipes for The Forge
             </h2>
@@ -97,24 +97,26 @@
                 Discover the top-rated weapon and armor recipes with highest success rates and proven results. Get the best DPS combinations and optimal ore usage for every game stage.
             </p>
             
-            <div>
-                <div>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin: 2rem 0;">
+                <div style="background: rgba(255, 255, 255, 0.03); padding: 1.5rem; border-radius: 12px;">
                     <h3>⚔️ Best Weapon Recipes</h3>
                     <p>Colossal Sword, Katana, Straight Sword with exact DPS values</p>
                 </div>
-                <div>
+                <div style="background: rgba(255, 255, 255, 0.03); padding: 1.5rem; border-radius: 12px;">
                     <h3>🛡️ Best Armor Recipes</h3>
                     <p>Light, Medium, Heavy armor with optimal protection</p>
                 </div>
-                <div>
+                <div style="background: rgba(255, 255, 255, 0.03); padding: 1.5rem; border-radius: 12px;">
                     <h3>📊 Game Stage Guide</h3>
                     <p>Endgame, Lategame, Midgame, Earlygame progression</p>
                 </div>
             </div>
             
-            <a href="/recipes/best-recipes">
-                🏆 View Best Recipes →
-            </a>
+            <div style="text-align: center; margin-top: 2rem;">
+                <a href="/recipes/best-recipes" class="forge-button" style="font-size: 1.2rem; padding: 1.25rem 2.5rem;">
+                    🏆 View Best Recipes →
+                </a>
+            </div>
         </div>
 
         <!-- Weapon Crafting Guide Table -->
