移除重复的 CSS 类，复用已有的 features-grid、feature-card、text-center 和 forge-button 类

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <!-- Best Recipes Entry Point -->
-        <div class="content-section recipe-database-section">
+        <div class="content-section recipe-highlight-section">
             <h2>
                 🏆 Best Recipes for The Forge
             </h2>
@@ -97,23 +97,23 @@
                 Discover the top-rated weapon and armor recipes with highest success rates and proven results. Get the best DPS combinations and optimal ore usage for every game stage.
             </p>
             
-            <div class="recipe-features-grid">
-                <div class="recipe-feature-card">
+            <div class="features-grid">
+                <div class="feature-card">
                     <h3>⚔️ Best Weapon Recipes</h3>
                     <p>Colossal Sword, Katana, Straight Sword with exact DPS values</p>
                 </div>
-                <div class="recipe-feature-card">
+                <div class="feature-card">
                     <h3>🛡️ Best Armor Recipes</h3>
                     <p>Light, Medium, Heavy armor with optimal protection</p>
                 </div>
-                <div class="recipe-feature-card">
+                <div class="feature-card">
                     <h3>📊 Game Stage Guide</h3>
                     <p>Endgame, Lategame, Midgame, Earlygame progression</p>
                 </div>
             </div>
             
-            <div class="recipe-cta-center">
-                <a href="/recipes/best-recipes" class="forge-button recipe-button-large">
+            <div class="text-center">
+                <a href="/recipes/best-recipes" class="forge-button">
                     🏆 View Best Recipes →
                 </a>
             </div>
