删除所有新增的 recipe 相关 CSS 类，完全使用已有的样式类和颜色变量

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <!-- Best Recipes Entry Point -->
-        <div class="content-section recipe-highlight-section">
+        <div class="content-section">
             <h2>
                 🏆 Best Recipes for The Forge
             </h2>
